--- a/templates/main.html
+++ b/templates/main.html
@@ -1,4 +1,5 @@
-<!doctype html> 
+<!DOCTYPE html>
+<meta charset="utf-8">
 
 <!--[if lt IE 7 ]> <html lang="en" class="no-js ie6"> <![endif]-->
 <!--[if IE 7 ]>     <html lang="en" class="no-js ie7"> <![endif]-->
@@ -10,6 +11,7 @@
     <title>{{ page_title }}</title>
     <link rel="stylesheet" href="{{ static_url("css/style.css") }}" />
     <link rel="stylesheet" href="{{ static_url("css/libs/normalize/normalize.css") }}" />
+    <script src="{{ static_url("js/jquery-2.1.0.min.js") }}"></script>
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
         <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
@@ -22,7 +24,7 @@
 
     <div id="main">
         <div id="container">
-            <h1>{{ page_heading }}</h1>
+            {% block body %}{% end %}
         </div><!-- end container -->
     </div><!-- end main -->
 
@@ -38,16 +40,6 @@
 
     <!-- main script -->
     <script src="{{ static_url("js/script.js") }}"></script>
-
-    {% if (google_analytics_id != False) %}
-    <!-- analytic party -->
-    <script type="text/javascript">
-        var _gaq=[['_setAccount','{{ google_analytics_id }}'],['_trackPageview']];
-        (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
-        g.src=('https:'==location.protocol?'//ssl':'//www')+'.google-analytics.com/ga.js';
-        s.parentNode.insertBefore(g,s)}(document,'script'));
-    </script>
-    {% end %}
 
     </body>
 </html>
