--- a/templates/index.html
+++ b/templates/index.html
@@ -4,11 +4,34 @@
 {% block body %}
 
 
-<ul>
-{% for report in reports %}
-	<li><a href="/{{report.eis_number}}/">{{report.title}}</a></li>
-{% end %}
-</ul>
+<h1 class="page-header">Environmental Impact Statements</h1>
+<h2 class="sub-header">Reports</h2>
+<form class="form-horizontal">
+	<input type="text" class="form-control" id="search-reports" placeholder="Search...">
+</form>
+<div class="table-responsive">
+<table class="table table-striped table-hover">
+	<thead>
+	<tr>
+		<th>#</th>
+		<th>Date</th>
+		<th>EIS Number</th>
+		<th>Title</th>
+	</tr>
+	</thead>
+	<tbody>
+		{%for i, report in enumerate(reports) %}
+			<tr>
+				<td>{{i+1}}</td>
+				<td>{{report.date_uploaded.strftime('%m/%d/%Y')}}</td>
+				<td>{{report.eis_number}}</td>
+				<td><a href="/{{report.eis_number}}/">{{report.title}}</a></td>
+			</tr>
+		{%end %}
+	</tbody>
+</table>
+
+</div>
 
 
 
