--- a/templates/main.html
+++ b/templates/main.html
@@ -7,7 +7,11 @@
 <!--[if (gte IE 9)|!(IE)]><!--> <html lang="en" class="no-js"> <!--<![endif]-->
 <head>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <!-- <link rel="icon" href="../../favicon.ico"> -->
     <title>{{ page_title }}</title>
     <link rel="stylesheet" href="{{ static_url("css/style.css") }}" />
     <link rel="stylesheet" href="{{ static_url("css/libs/normalize/normalize.css") }}" />
@@ -16,6 +20,9 @@
     <!--[if lt IE 9]>
         <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
+    <!-- Bootstrap core CSS -->
+    <link rel="stylesheet" href="{{ static_url("css/bootstrap.min.css") }}" />
+    <link rel="stylesheet" href="{{ static_url("css/dashboard.css") }}" />
 </head>
 <body>
 
@@ -24,7 +31,41 @@
 
     <div id="main">
         <div id="container">
-            {% block body %}{% end %}
+            <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+              <div class="container-fluid">
+                <div class="navbar-header">
+                  <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                  </button>
+                  <a class="navbar-brand" href="/">Environmental Impact Statement Database</a>
+                </div>
+                <div id="navbar" class="navbar-collapse collapse">
+                  <ul class="nav navbar-nav navbar-right">
+                    <li><a href="/">Search</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Help</a></li>
+                  </ul>
+                </div>
+              </div>
+            </nav>
+
+                <div class="container-fluid">
+                  <div class="row">
+                    <div class="col-sm-3 col-md-2 sidebar">
+                      <ul class="nav nav-sidebar">
+                        <li><a href="/">Search</a></li>
+                        <li><a href="/">All Reports</a></li>
+                        <li><a href="#">About</a></li>
+                      </ul>
+                    </div>
+                    <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
+                        {% block body %}{% end %}
+                    </div>
+              </div>
+            </div>
         </div><!-- end container -->
     </div><!-- end main -->
 
@@ -32,9 +73,9 @@
     </footer><!-- end footer -->
 
     <!-- Load jQuery -->
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
-    <script>!window.jQuery && document.write('<script src="{{ static_url("js/libs/jquery/jquery-1.10.1.min.js") }}"><\/script>')</script>
-
+    <script src="{{ static_url("js/jquery-2.1.0.min.js") }}"></script>
+    <script src="{{ static_url("js/bootstrap.min.js") }}"></script>
+    <script src="{{ static_url("js/docs.min.js") }}"></script>
     <!-- plugins -->
     <script src="{{ static_url("js/plugins.js") }}"></script>
 
