--- a/templates/index.html
+++ b/templates/index.html
@@ -9,6 +9,8 @@
 <form class="form-horizontal">
 	<input type="text" class="form-control" id="search-reports" placeholder="Search...">
 </form>
+<p>Viewing: {{display_from}} to {{display_from + 100}}</p>
+<p>{% if display_from != 0 %}<a href="/?view={{display_from - 100}}">Previous 100</a> ... {%end%}<a href="/?view={{display_from + 100}}">Next 100</a></p>
 <div class="table-responsive">
 <table class="table table-striped table-hover">
 	<thead>
