--- a/templates/main.html
+++ b/templates/main.html
@@ -44,7 +44,7 @@
                 </div>
                 <div id="navbar" class="navbar-collapse collapse">
                   <ul class="nav navbar-nav navbar-right">
-                    <li><a href="/">Search</a></li>
+                    <li><a href="/search/">Search</a></li>
                     <li><a href="#">About</a></li>
                     <li><a href="#">Help</a></li>
                   </ul>
@@ -56,7 +56,7 @@
                   <div class="row">
                     <div class="col-sm-3 col-md-2 sidebar">
                       <ul class="nav nav-sidebar">
-                        <li><a href="/">Search</a></li>
+                        <li><a href="/search/">Search</a></li>
                         <li><a href="/">All Reports</a></li>
                         <li><a href="#">About</a></li>
                       </ul>
