--- a/templates/main.html
+++ b/templates/main.html
@@ -78,7 +78,7 @@
     <script src="{{ static_url("js/docs.min.js") }}"></script>
     <!-- plugins -->
     <script src="{{ static_url("js/plugins.js") }}"></script>
-
+    <script src="{{ static_url("js/underscore-min.js") }}"></script>
     <!-- main script -->
     <script src="{{ static_url("js/script.js") }}"></script>
 
