--- a/templates/search.html
+++ b/templates/search.html
@@ -3,23 +3,22 @@
 
 {% block body %}
 
-
 <h1 class="page-header">Environmental Impact Statements</h1>
 <h2 class="sub-header">Reports</h2>
 <form class="form-horizontal">
 	<input type="text" class="form-control" id="search-reports" name="query" placeholder="Search...">
 </form>
-{% if reports %}
-	<p>Found: {{len(reports)}} results</p>
-	<p>Viewing: {{display_from}} to {{display_from + display_num - 1}}</p>
-	{% if display_from == 1 %}
-		<p><a href="/?view={{display_from + display_num}}&display={{display_num}}">Next {{display_num}}</a>
+{% if query %}
+	<p>Found: {{results['size']}} results for "{{query}}"</p>
+	<p>Viewing: {{display_from+1}} to {% if display_from+display_num > results['size'] %}{{results['size']}}{%else%}{{display_from + display_num}}{%end%}</p>
+	{% if display_from == 0 %}
+		<p><a href="?query={{query}}&view={{display_from + display_num}}&display={{display_num}}">Next {{display_num}}</a>
 	{% else %}
-		<a href="/?view={{display_from - display_num}}&display={{display_num}}">Previous {{display_num}}</a> ... <a href="/?view={{display_from + display_num}}&display={{display_num}}">Next {{display_num}}</a></p>
+		<a href="?query={{query}}&view={{display_from - display_num}}&display={{display_num}}">Previous {{display_num}}</a> ... <a href="?query={{query}}&view={{display_from + display_num}}&display={{display_num}}">Next {{display_num}}</a></p>
 	{%end%}
 
 <div class="table-responsive">
-<table class="table table-striped table-hover">
+<table class="table table-striped table-hover report-table">
 	<thead>
 	<tr>
 		<th>#</th>
@@ -28,13 +27,13 @@
 		<th>Title</th>
 	</tr>
 	</thead>
-	<tbody>
-		{%for i, report in enumerate(reports) %}
+	<tbody class="report-rows">
+		{%for i, report in enumerate(results['results']) %}
 			<tr>
-				<td>{{display_from + i}}</td>
-				<td>{{report.date_uploaded.strftime('%m/%d/%Y')}}</td>
-				<td>{{report.eis_number}}</td>
-				<td><a href="/{{report.eis_number}}/">{{report.title}}</a></td>
+				<td>{{display_from + i + 1}}</td>
+				<td>{{datetime.datetime.strptime(report['_source']['date'], '%Y-%m-%dT%H:%M:%S').strftime('%m/%d/%Y')}}</td>
+				<td>{{report['_source']['eis_number']}}</td>
+				<td><a href="/{{report['_source']['eis_number']}}/">{{report['_source']['title']}}</a></td>
 			</tr>
 		{%end %}
 	</tbody>
@@ -43,7 +42,48 @@
 </div>
 
 {%else%}
-<h2>No resulrs found</h2>
 {%end%}
+
+<script type='text/template' id='report-template'>
+	<tr class="report-table-row">
+		<td class="result-number"></td>
+		<td class="report-date"><%= date %></td>
+		<td class="report-eis-number"><%= eis_number %></td>
+		<td class="report-title"><a href="/<%= eis_number %>/"><%= title %></a></td>
+	</tr>
+</script>
+
+<script type="text/javascript">
+
+$(document).ready( function() {
+	var results = []
+	var report = _.template($("#report-template").html());
+
+	$('#container').on("click", "#submit", function() {
+		var query =  $('#search-reports').val();
+		$.ajax({
+			type: 'POST',
+			url: '/search/',
+			data: { "query":query },
+			error: function(error) {
+				console.debug(JSON.stringify(error));
+				$(".error_message").text("Something went wrong :(").show().delay(5000).fadeOut();
+			},
+			beforeSend: function(xhr, settings) {
+			},
+			success: function(response) {
+				var obj = jQuery.parseJSON(response);
+				$.each(obj, function(key,value) {
+					data = {"report_num":key, "date":value['date'], "eis_number":value['eis_number'], "title":value['title']};
+					$(".report-rows").append(report(data));
+				});
+			}
+		});
+	});
+
+});
+</script>
+
+
 
 {%end%}
