--- a/templates/index.html
+++ b/templates/index.html
@@ -14,8 +14,54 @@
 	<a href="/?view={{display_from - display_num}}&display={{display_num}}">Previous {{display_num}}</a> ... <a href="/?view={{display_from + display_num}}&display={{display_num}}">Next {{display_num}}</a>
 {%end%}
 </p>
+
+<div class="report-filters">
+	<form class="form-inline" role="form">
+		<button type="submit" class="btn btn-info">Filter</button>
+		<div class="form-group">
+			<div class="input-group">
+				<label for="filter-state" class="sr-only"></label>
+				<select id="filter-state" name="state" class="form-control">
+					<option value="">(Select State)</option>
+					{% for s in state_abbrev_list %}
+						<option value="{{s}}">{{states[s]}}</option>
+					{%end%}
+				</select> 
+			</div>
+		</div>
+		<div class="form-group">
+			<div class="input-group">
+				<label for="filter-agency" class="sr-only"></label>
+				<select id="filter-agency" name="agency" class="form-control">
+					<option value="">(Select Agency)</option>
+					{% for a in agencies_abbrev_list %}
+						<option value="{{a}}">{%if agencies[a] %}{{agencies[a]}}{%else%}{{a}}{%end%}</option>
+					{%end%}
+				</select> 
+			</div>
+		</div>
+		<div class="form-group">
+			<div class="input-group">
+				<label for="filter-date-range-from" class="sr-only">From</label>
+				<input type="text" class="form-control" id="filter-date-range-from" name="date_from" placeholder="From">
+			</div>
+			<div class="input-group">
+				<label for="filter-date-range-to" class="sr-only">To</label>
+				<input type="text" class="form-control" id="filter-date-range-to" name="date_to" placeholder="To">
+			</div>
+		</div>
+		<div class="form-group">
+			<div class="checkbox">
+				<label for="filter-final-eis" class="checkbox">
+					<input type="checkbox" id="filter-final-eis" name="final_eis_only"> Final EIS only
+				</label>
+			</div>
+		</div>
+	</form>
+</div>
+
 <div class="table-responsive">
-<table class="table table-striped table-hover">
+<table class="table table-striped table-hover display" id="report-table">
 	<thead>
 	<tr>
 		<th>#</th>
@@ -28,7 +74,7 @@
 		{%for i, report in enumerate(reports) %}
 			<tr>
 				<td>{{display_from + i+1}}</td>
-				<td>{{report.date_uploaded.strftime('%m/%d/%Y')}}</td>
+				<td data-order="{{report.federal_register_date.strftime("%s")}}">{{report.federal_register_date.strftime('%m/%d/%Y')}}</td>
 				<td>{{report.eis_number}}</td>
 				<td><a href="/{{report.eis_number}}/">{{report.title}}</a></td>
 			</tr>
