--- a/templates/main.html
+++ b/templates/main.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="{{ static_url("css/libs/normalize/normalize.css") }}" />
     <link rel="stylesheet" href="{{ static_url("js/jquery-ui-1.11.2.custom/jquery-ui.min.css") }}">
     <link rel="stylesheet" href="{{ static_url("js/jquery-ui-1.11.2.custom/jquery-ui.theme.min.css") }}">
+    <link rel="stylesheet" href="{{ static_url("css/jquery.dataTables.css") }}" />
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
         <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
@@ -78,6 +79,7 @@
     <!-- Load jQuery -->
     <script src="{{ static_url("js/jquery-2.1.0.min.js") }}"></script>
     <script src="{{ static_url("js/jquery-ui-1.11.2.custom/jquery-ui.js") }}"></script>
+    <script src="{{ static_url("js/jquery.dataTables.min.js") }}"></script>
     <script src="{{ static_url("js/bootstrap.min.js") }}"></script>
     <script src="{{ static_url("js/docs.min.js") }}"></script>
     <!-- plugins -->
