--- a/templates/search.html
+++ b/templates/search.html
@@ -46,7 +46,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="form-group">
+<!-- 		<div class="form-group">
 			<div class="col-sm-10">
 				<div class="checkbox">
 					<label for="filter-comment-letter">
@@ -54,7 +54,7 @@
 					</label>
 				</div>
 			</div>
-		</div>
+		</div> -->
 		<div class="form-group">
 			<div class="col-sm-10">
 				<div class="checkbox">
@@ -75,37 +75,36 @@
 {% if query %}
 	<p>Found: {{total_hits}} results for "{{query}}"</p>
 	<p>Viewing: {{display_from+1}} to {% if display_from+display_num > total_hits %}{{total_hits}}{%else%}{{display_from + display_num}}{%end%}
-	{%if total_hits > display_num %}
-		{% if display_from == 0 or display_from < display_num %}
-			<a href="?query={{query}}&view={{display_from + display_num}}&display={{display_num}}">Next {{display_num}}</a>
-		{% else %}
-			<a href="?query={{query}}&view={{display_from - display_num}}&display={{display_num}}">Previous {{display_num}}</a> {% if display_num < total_hits - display_from %}... <a href="?query={{query}}&view={{display_from + display_num}}&display={{display_num}}">Next {{display_num}}</a>{%end%}
+		{%if total_hits > display_num %}
+			{% if display_from == 0 or display_from < display_num %}
+				<a href="?query={{query}}&view={{display_from + display_num}}&display={{display_num}}">Next {{display_num}}</a>
+			{% else %}
+				<a href="?query={{query}}&view={{display_from - display_num}}&display={{display_num}}">Previous {{display_num}}</a> {% if display_num < total_hits - display_from %}... <a href="?query={{query}}&view={{display_from + display_num}}&display={{display_num}}">Next {{display_num}}</a>{%end%}
+			{%end%}
 		{%end%}
-	{%end%}
-</p>
+	</p>
 
-<div class="table-responsive">
-<table class="table table-striped table-hover report-table">
-	<thead>
-	<tr>
-		<th>#</th>
-		<th>Date</th>
-		<th>EIS Number</th>
-		<th>Title</th>
-	</tr>
-	</thead>
-	<tbody class="report-rows">
-		{%for i, r in enumerate(results) %}
+	<div class="table-responsive">
+		<table class="table table-striped table-hover report-table">
+			<thead>
 			<tr>
-				<td>{{display_from + i + 1}}</td>
-				<td>{{datetime.datetime.strptime(r['fields']['date'][0], '%Y-%m-%dT%H:%M:%S').strftime('%m/%d/%Y')}}</td>
-				<td>{{r['fields']['eis_number'][0]}}</td>
-				<td><a href="/{{r['fields']['eis_number'][0]}}/">{{r['fields']['title'][0]}}</a></td>
+				<th>#</th>
+				<th>Date</th>
+				<th>EIS Number</th>
+				<th>Title</th>
 			</tr>
-		{%end %}
-	</tbody>
-</table>
-
+			</thead>
+			<tbody class="report-rows">
+				{%for i, r in enumerate(results) %}
+					<tr>
+						<td>{{display_from + i + 1}}</td>
+						<td>{%try%}{{datetime.datetime.strptime(r['fields']['date'][0], '%Y-%m-%dT%H:%M:%S').strftime('%m/%d/%Y')}}{%except%}{%end%}</td>
+						<td>{%try%}{{r['fields']['eis_number'][0]}}{%except%}{%end%}</td>
+						<td>{%try%}<a href="/{{r['fields']['eis_number'][0]}}/">{{r['fields']['title'][0]}}{%except%}{%end%}</a></td>
+					</tr>
+				{%end %}
+			</tbody>
+		</table>
 </div>
 
 {%else%}
