--- a/templates/index.html
+++ b/templates/index.html
@@ -20,14 +20,14 @@
 
 <div class="report-filters">
 	<form class="form-inline" role="form">
-		<button type="submit" class="btn btn-info">Filter</button>
+		<button type="button" class="btn" id="clear-filters">Clear</button>
 		<div class="form-group">
 			<div class="input-group">
 				<label for="filter-state" class="sr-only"></label>
 				<select id="filter-state" name="state" class="form-control">
 					<option value="">(Select State)</option>
 					{% for s in state_abbrev_list %}
-						<option value="{{s}}">{{states[s]}}</option>
+						<option value="{{s}}" {% if q['s'] == s %}selected{%end%}  >{{states[s]}}</option>
 					{%end%}
 				</select> 
 			</div>
@@ -38,7 +38,7 @@
 				<select id="filter-agency" name="agency" class="form-control">
 					<option value="">(Select Agency)</option>
 					{% for a in agencies_abbrev_list %}
-						<option value="{{a}}">{%if agencies[a] %}{{agencies[a]}}{%else%}{{a}}{%end%}</option>
+						<option value="{{a}}" {% if q['a'] == a %}selected{%end%}>{%if agencies[a] %}{{agencies[a]}}{%else%}{{a}}{%end%}</option>
 					{%end%}
 				</select> 
 			</div>
@@ -46,20 +46,14 @@
 		<div class="form-group">
 			<div class="input-group">
 				<label for="filter-date-range-from" class="sr-only">From</label>
-				<input type="text" class="form-control" id="filter-date-range-from" name="date_from" placeholder="From">
+				<input type="text" class="form-control" id="filter-date-range-from" name="date_from" value="{{q['df']}}" placeholder="From">
 			</div>
 			<div class="input-group">
 				<label for="filter-date-range-to" class="sr-only">To</label>
-				<input type="text" class="form-control" id="filter-date-range-to" name="date_to" placeholder="To">
+				<input type="text" class="form-control" id="filter-date-range-to" name="date_to" value="{{q['dt']}}" placeholder="To">
 			</div>
 		</div>
-		<div class="form-group">
-			<div class="checkbox">
-				<label for="filter-final-eis" class="checkbox">
-					<input type="checkbox" id="filter-final-eis" name="final_eis_only"> Final EIS only
-				</label>
-			</div>
-		</div>
+		<button type="submit" class="btn btn-info">Filter</button>
 	</form>
 </div>
 
