--- a/templates/main.html
+++ b/templates/main.html
@@ -46,8 +46,9 @@
                 </div>
                 <div id="navbar" class="navbar-collapse collapse">
                   <ul class="nav navbar-nav navbar-right">
+                    <li><a href="/">All Reports</a></li>
                     <li><a href="/search/">Search</a></li>
-                    <li><a href="/advanced/">Advanced Search</a></li>
+                    <li><a href="/search-files/">Search Files</a></li>
                     <li><a href="#">About</a></li>
                     <li><a href="#">Help</a></li>
                   </ul>
@@ -59,9 +60,9 @@
                   <div class="row">
                     <div class="col-sm-3 col-md-2 sidebar">
                       <ul class="nav nav-sidebar">
-                        <li><a href="/search/">Search</a></li>
-                        <li><a href="/advanced/">Advanced Search</a></li>
                         <li><a href="/">All Reports</a></li>
+                        <li><a href="/search/">Search</a></li>
+                        <li><a href="/search-files/">Search Files</a></li>
                         <li><a href="#">About</a></li>
                       </ul>
                     </div>
