--- a/templates/index.html
+++ b/templates/index.html
@@ -53,6 +53,13 @@
 				<input type="text" class="form-control" id="filter-date-range-to" name="date_to" value="{{q['dt']}}" placeholder="To">
 			</div>
 		</div>
+<!-- 		<div class="form-group">
+			<div class="checkbox">
+				<label>
+					<input type="checkbox" name="final_eis_only"> Final Only
+				</label>
+			</div>
+		</div> -->
 		<button type="submit" class="btn btn-info">Filter</button>
 	</form>
 </div>
