--- a/templates/report.html
+++ b/templates/report.html
@@ -56,6 +56,7 @@
 			<th>Last Modified</th>
 			<th>Size</th>
 			<th>Title</th>
+			<th>Preview</th>
 		</tr>
 		</thead>
 		<tbody>
@@ -65,6 +66,7 @@
 					<td>{%if file.last_modified %}{{ file.last_modified.strftime('%m/%d/%Y')}}{%end%}</td>
 					<td>{{ file.content_length / 1000000 }} mb</td>
 					<td><a href="{{file.file_url_s3}}">{{file.title}}</a></td>
+					<td><a href="{{file.title}}">Preview</a></td>
 				</tr>
 			{%end %}
 		</tbody>
