--- a/templates/report.html
+++ b/templates/report.html
@@ -66,7 +66,7 @@
 					<td>{%if file.last_modified %}{{ file.last_modified.strftime('%m/%d/%Y')}}{%end%}</td>
 					<td>{{ file.content_length / 1000000 }} mb</td>
 					<td><a href="{{file.file_url_s3}}">{{file.title}}</a></td>
-					<td><a href="{{file.title}}">Preview</a></td>
+					<td><a href="{{file.title.replace(".pdf", "")}}">Preview</a></td>
 				</tr>
 			{%end %}
 		</tbody>
