--- a/templates/report.html
+++ b/templates/report.html
@@ -64,7 +64,7 @@
 				<tr>
 					<td>{{i+1}}</td>
 					<td>{%if file.last_modified %}{{ file.last_modified.strftime('%m/%d/%Y')}}{%end%}</td>
-					<td>{{ file.content_length / 1000000 }} mb</td>
+					<td>{{ "{:,}".format(file.content_length / 1000) }} kb</td>
 					<td><a href="{{file.file_url_s3}}">{{file.title}}</a></td>
 					<td><a href="{{file.title.replace(".pdf", "")}}">Preview</a></td>
 				</tr>
