--- a/templates/search.html
+++ b/templates/search.html
@@ -3,68 +3,77 @@
 
 {% block body %}
 
+<style>
+	.form-filters {display: none;}
+	.accordion-toggle {cursor: pointer;}
+	.accordion-content {display: none;}
+	.accordion-content.default {display: none;}
+</style>
+
 <h1 class="page-header">Environmental Impact Statements</h1>
 <h2 class="sub-header">Reports</h2>
 <form class="form-horizontal">
 	<div class="form-group">
 		<input type="text" class="form-control" id="search-reports" name="query" placeholder="Search...">
 	</div>
-	<div class="form-filters">
-		<h3>Filters</h3>
-		<div class="form-group">
-			<label for="filter-state" class="col-sm-1 control-label">State</label>
-			<div class="col-sm-10">
-				<select id="filter-state" name="state" class="form-inline">
-					<option value="">(Select State)</option>
-					{% for s in state_abbrev_list %}
-						<option value="{{s}}">{{states[s]}}</option>
-					{%end%}
-				</select> 
-			</div>
-		</div>
-		<div class="form-group">
-			<label for="filter-agency" class="col-sm-1 control-label">Agency</label>
-			<div class="col-sm-10">
-				<select id="filter-agency" name="agency" class="form-inline">
-					<option value="">(Select Agency)</option>
-					{% for a in agencies_abbrev_list %}
-						<option value="{{a}}">{%if agencies[a] %}{{agencies[a]}}{%else%}{{a}}{%end%}</option>
-					{%end%}
-				</select> 
-			</div>
-		</div>
-		<div class="date-range">
-			<h4>Date Range</h4>
+	<div id="accordion">
+		<h3 class="accordion-toggle"><span class="filter-arrow">&#x25B6</span> Filters</h3>
+		<div class="form-filters accordion-content default">
 			<div class="form-group">
-				<label for="filter-date-range-from" class="col-sm-1 control-label">From</label>
-				<div class="col-sm-2">
-					<input type="text" id="filter-date-range-from" name="date_from">
+				<label for="filter-state" class="col-sm-1 control-label">State</label>
+				<div class="col-sm-10">
+					<select id="filter-state" name="state" class="form-inline">
+						<option value="">(Select State)</option>
+						{% for s in state_abbrev_list %}
+							<option value="{{s}}">{{states[s]}}</option>
+						{%end%}
+					</select> 
 				</div>
-				<label for="filter-date-range-to" class="col-sm-1 control-label">To</label>
-				<div class="col-sm-1">
-					<input type="text" id="filter-date-range-to" name="date_to">
+			</div>
+			<div class="form-group">
+				<label for="filter-agency" class="col-sm-1 control-label">Agency</label>
+				<div class="col-sm-10">
+					<select id="filter-agency" name="agency" class="form-inline">
+						<option value="">(Select Agency)</option>
+						{% for a in agencies_abbrev_list %}
+							<option value="{{a}}">{%if agencies[a] %}{{agencies[a]}}{%else%}{{a}}{%end%}</option>
+						{%end%}
+					</select> 
+				</div>
+			</div>
+			<div class="date-range">
+				<h4>Date Range</h4>
+				<div class="form-group">
+					<label for="filter-date-range-from" class="col-sm-1 control-label">From</label>
+					<div class="col-sm-2">
+						<input type="text" id="filter-date-range-from" name="date_from">
+					</div>
+					<label for="filter-date-range-to" class="col-sm-1 control-label">To</label>
+					<div class="col-sm-1">
+						<input type="text" id="filter-date-range-to" name="date_to">
+					</div>
+				</div>
+			</div>
+	<!-- 		<div class="form-group">
+				<div class="col-sm-10">
+					<div class="checkbox">
+						<label for="filter-comment-letter">
+							<input type="checkbox" id="filter-comment-letter" name="include_letters">Only Reports with Comment Letters
+						</label>
+					</div>
+				</div>
+			</div> -->
+			<div class="form-group">
+				<div class="col-sm-10">
+					<div class="checkbox">
+						<label for="filter-final-eis">
+							<input type="checkbox" id="filter-final-eis" name="final_eis_only">Final EIS only
+						</label>
+					</div>
 				</div>
 			</div>
 		</div>
-<!-- 		<div class="form-group">
-			<div class="col-sm-10">
-				<div class="checkbox">
-					<label for="filter-comment-letter">
-						<input type="checkbox" id="filter-comment-letter" name="include_letters">Only Reports with Comment Letters
-					</label>
-				</div>
-			</div>
-		</div> -->
-		<div class="form-group">
-			<div class="col-sm-10">
-				<div class="checkbox">
-					<label for="filter-final-eis">
-						<input type="checkbox" id="filter-final-eis" name="final_eis_only">Final EIS only
-					</label>
-				</div>
-			</div>
-		</div>
-		<div class="col-sm-offset-2 col-sm-10">
+		<div class="col-md-10">
 			<button type="submit" class="btn btn-default">Search</button>
 		</div>
 	</div>
@@ -72,17 +81,22 @@
 
 
 
+
 {% if query %}
-	<p>Found: {{total_hits}} results for "{{query}}"</p>
-	<p>Viewing: {{display_from+1}} to {% if display_from+display_num > total_hits %}{{total_hits}}{%else%}{{display_from + display_num}}{%end%}
-		{%if total_hits > display_num %}
-			{% if display_from == 0 or display_from < display_num %}
-				<a href="?query={{query}}&view={{display_from + display_num}}&display={{display_num}}">Next {{display_num}}</a>
-			{% else %}
-				<a href="?query={{query}}&view={{display_from - display_num}}&display={{display_num}}">Previous {{display_num}}</a> {% if display_num < total_hits - display_from %}... <a href="?query={{query}}&view={{display_from + display_num}}&display={{display_num}}">Next {{display_num}}</a>{%end%}
-			{%end%}
-		{%end%}
-	</p>
+	<div class="row results-info">
+		<div class="col-md-12">
+			<p><strong>Found:</strong> {{total_hits}} results for "{{query}}"</p>
+			<p><strong>Viewing:</strong> {{display_from+1}} to {% if display_from+display_num > total_hits %}{{total_hits}}{%else%}{{display_from + display_num}}{%end%}
+				{%if total_hits > display_num %}
+					{% if display_from == 0 or display_from < display_num %}
+						<a href="?query={{query}}&view={{display_from + display_num}}&display={{display_num}}">Next {{display_num}}</a>
+					{% else %}
+						<a href="?query={{query}}&view={{display_from - display_num}}&display={{display_num}}">Previous {{display_num}}</a> {% if display_num < total_hits - display_from %}... <a href="?query={{query}}&view={{display_from + display_num}}&display={{display_num}}">Next {{display_num}}</a>{%end%}
+					{%end%}
+				{%end%}
+			</p>
+		</div>
+	</div>
 
 	<div class="table-responsive">
 		<table class="table table-striped table-hover report-table">
