--- a/templates/report.html
+++ b/templates/report.html
@@ -55,6 +55,7 @@
 			<th>#</th>
 			<th>Last Modified</th>
 			<th>Size</th>
+			<th>Pages</th>
 			<th>Title</th>
 			<th>Preview</th>
 		</tr>
@@ -65,6 +66,7 @@
 					<td>{{i+1}}</td>
 					<td>{%if file.last_modified %}{{ file.last_modified.strftime('%m/%d/%Y')}}{%end%}</td>
 					<td>{{ "{:,}".format(file.content_length / 1000) }} kb</td>
+					<td>{% if file.num_pages %}{{num_pages}}{%end%}</td>
 					<td><a href="{{file.file_url_s3}}">{{file.title}}</a></td>
 					<td><a href="{{file.title.replace(".pdf", "")}}">Preview</a></td>
 				</tr>
