--- a/templates/main.html
+++ b/templates/main.html
@@ -57,6 +57,7 @@
                       <ul class="nav nav-sidebar">
                         <li><a href="/">All Reports</a></li>
                         <li><a href="/search/">Search</a></li>
+                        <li><a href="/search-files/">Full Text Search</a></li>
                         <li><a href="#">About</a></li>
                       </ul>
                     </div>
